2004-02-19  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/UniformPanel.cpp (setShader): Don't display widgets for constants.
	(setShader): Don't display widgets for unnamed uniforms.

	* src/CelShader.cpp: Added the super awesome CelShader using
	Shader Algebra.

	* src/ShrikeFrame.cpp (openModel): Use SHMEDIA_DIR.
	(ShrikeFrame): Use SHMEDIA_DIR.

	* configure.ac: Use WX_FIND_WX_CONFIG

	* src/Makefile.am: Use ${WX_CONFIG} instead of wx-config.

	* config/wx.m4: Added this file, to check for wx-config.

	* configure.ac: Use SHMEDIA_WITH_SHMEDIA_DIR.

	* config/shmedia.m4: Added this file.
