@@ -1,3 +1,12 @@
+2004-02-19  Bryan Chan <b8chan@uwaterloo.ca
+	* src/WorleyShader.cpp:
+	Cleaned up worley shader
+
+	* src/DiscoShader.cpp:
+	Added a funky cell noise demo
+	(currently with a time slider in anticipation of 
+	animation working :)
+	
 2004-02-19  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
 	* src/UniformPanel.cpp (setShader): Don't display widgets for constants.
